--- a/OnlineShop/src/scss/sections/_products.scss
+++ b/OnlineShop/src/scss/sections/_products.scss
@@ -158,12 +158,12 @@
           margin-top: 19px;
 
           & span {
-            padding-top: 5px;
-            font-size: 1.5rem;
+            padding-top: 3px;
+            font-size: 1.25rem;
             color: $second-color;
             display: inline-block;
-            width: 34px;
-            height: 34px;
+            width: 28px;
+            height: 28px;
             border: 2px solid $second-color;
             margin-right: 5px;
           }
@@ -173,8 +173,8 @@
             font-size: 1.125rem;
             font-family: $font-family;
             font-weight: bold;
-            width: 70px;
-            height: 34px;
+            width: 65px;
+            height: 28px;
             background-color: $second-color;
             @include flex-layout();
           }
@@ -247,9 +247,6 @@
         font-family: $font-family;
         text-transform: capitalize;
         display: inline-block;
-        & .active {
-          color: $primary-color;
-        }
       }
     }
 
@@ -476,10 +473,19 @@
 
 }
 
+#productModal .modal-header{
+   border: none !important;
+ }
+
+#productModal .modal-content{
+  border-radius: 0;
+}
+
 .modal-product{
   color: $second-color;
   font-family: $font-family;
   font-size: 0.875rem;
+
   & .container-fluid{
     position: relative;
   }
@@ -497,16 +503,15 @@
     margin-bottom: 15px;
   }
   &-img{
-  width: 436px;
-  height: 406px;
+  width: 390px;
+  height: 365px;
   background-color: #f4f5f7;
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
   background-position: center;
-  margin-top: 60px;
-  margin-right: auto;
-  margin-left: auto;
+  margin-top: 10px;
+  margin-bottom: 20px;
   }
   &-container{
     width: 100%;
@@ -527,24 +532,26 @@
     text-transform: capitalize;
     font-weight: bold;
     text-align: left;
-    margin-top: 50px;
     margin-bottom: 18px;
     color: black;
   }
-  &-close {
-    width: 38px;
-    height: 35px;
-    background-color: black;
-    display: block;
+  &-close{
+    width: 41px ;
+    height: 37px ;
+    background-color: black ;
+    display: block ;
     text-align: center;
-    color: white;
-    font-size: 1.5rem;
+    color: white ;
+    font-size: 2rem ;
     font-weight: bold;
     position: absolute;
-    top: 5%;
-    right: 10%;
-    text-decoration: none;
-    padding-bottom: 2px;
+    top: 0% ;
+    right: 0% ;
+    text-decoration: none !important;
+    padding-top: 4px ;
+    &:hover{
+      color: white;
+    }
   }
   &-stars{
     font-size: 1rem;
@@ -574,8 +581,8 @@
   &-like{
     display: inline-block;
     font-size: 1.5rem;
-    width: 38px;
-    height: 38px;
+    width: 35px;
+    height: 35px;
     border-radius: 0;
     padding-top: 5px;
     border: 1px solid $second-color;
@@ -586,8 +593,6 @@
   }
  }
 
-.products-filter-color-label .active{
-  color: $primary-color;
-}
+
 
 
