--- a/OnlineShop/src/templates/blog.html
+++ b/OnlineShop/src/templates/blog.html
@@ -1,5 +1,6 @@
 <section class="blog">
 	<div class="container">
+		<div id="blog"><a name="top" href="#"></a></div>
 		<div class="row">
 			<div class="col"><h2 class="title-light">latest blog</h2></div>
 		</div>
