--- a/OnlineShop/src/templates/features.html
+++ b/OnlineShop/src/templates/features.html
@@ -1,5 +1,6 @@
 <section class="features">
-        <div class="container d-flex flex-wrap">    
+        <div class="container d-flex flex-wrap">                  
+            <div id="features"><a name="top" href="#"></a></div>
             <div class="col-12 col-sm-6 col-lg-3 features-item-wrapper ">
                 <div class="features-item">
                     <div class="features-item-icon rounded-circle">
