--- a/OnlineShop/src/templates/products.html
+++ b/OnlineShop/src/templates/products.html
@@ -1,5 +1,6 @@
 <section class="products">
 	<div class="container ">
+		<div id="products"><a name="top" href="#"></a></div>
 		<div class="row">
 			<div class="col-lg-9 col-12 p-0 m-0">
 				<div class="d-flex justify-content-end p-0 m-0">
