--- a/OnlineShop/src/templates/top-menu.html
+++ b/OnlineShop/src/templates/top-menu.html
@@ -1,7 +1,8 @@
 <section class="top-menu">
     <div class="container">
-        <nav class="navbar navbar-expand-lg navbar-light">
-            <form class="form-inline pb-lg-5 pt-2" action="/action_page.php">
+       
+          <nav class="navbar navbar-expand-xl navbar-light align-items-center align-content-center">
+            <form class="col-6 col-md-3 col-lg-4 d-flex p-0 mt-4 nav-search" action="/action_page.php">
                 <input class="form-control" type="text" placeholder="Search products">
                 <div class="input-group-append">
                     <a class="btn-outline-none">
@@ -11,7 +12,7 @@
             </form>
 
             <!-- Toggler/collapsibe Button -->
-            <div class="navbar-toggler"  data-toggle="collapse" data-target="#collapsibleNavbar">
+            <div class="navbar-toggler mb-4"  data-toggle="collapse" data-target="#collapsibleNavbar">
                 <!-- <span class="navbar-toggler-icon"></span> -->
                 <span></span>
                 <span></span>
@@ -19,33 +20,34 @@
             </div>
 
             <!-- Navbar links -->
-            <div class="collapse navbar-collapse wide " id="collapsibleNavbar">
+            <div class="collapse navbar-collapse wide justify-self-end" id="collapsibleNavbar">
                
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">HOME</a>
+                        <a class="nav-link click" href="#home">HOME</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">SLIDER</a>
+                        <a class="nav-link click" href="#slider">SLIDER</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">FEATURES</a>
+                        <a class="nav-link click" href="#features">FEATURES</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">STOCKS</a>
+                        <a class="nav-link click" href="#stocks">STOCKS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">PRODUCTS</a>
+                        <a class="nav-link click" href="#products">PRODUCTS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">GALLERY</a>
+                        <a class="nav-link click" href="#gallery">GALLERY</a>
                     </li>
                     <li class="nav-item">
-                            <a class="nav-link" href="#">BLOG</a>
+                            <a class="nav-link click" href="#blog">BLOG</a>
                     </li>
                 </ul>
             
             </div>
         </nav>
-    </div>
+      </div>
+   
 </section>
