--- a/OnlineShop/src/scss/sections/_gallery.scss
+++ b/OnlineShop/src/scss/sections/_gallery.scss
@@ -1,23 +1,27 @@
+// furniture gallery
+
 .furniture-gallery {
-  height: 454px;
-  
+  // height: 454px;
+  overflow: hidden;  
   position:relative;
+
   a {
     color: black;
-    font-weight: bold;
+    
   }
 }
-.tab-content{
-    // border: 1px solid #e9e9e9;
-    border-top: none;
+.tab-content{    
+  border-top: none;
   background-color: #f4f5f7;
 }
 
 .nav-tabs {
   width: 100%;
+  min-width: 451px;
   border: none;
+  margin-top: 43px;  
 
-  .nav-item {
+  .nav-item {   
     height: 100%;
     margin: 0;
     padding: 0;
@@ -29,12 +33,10 @@
     
     a {
       border-top: 2px solid transparent;
-      border-radius: 0;
+      border-radius: 0;     
       padding: 0;
       border: 1px solid #e9e9e9;
-     
-      
-      
+            
       &:hover,
       &.active {
         border-top: 2px solid #d58e32;       
@@ -145,7 +147,7 @@
 }
 
 .btn-left {
-//   width: 33px;
+  width: 33px;
   height: 70px;
   background-color: #2a2a2a;
   font-size: 20px;
@@ -191,7 +193,7 @@
 /*панель слева добавить в избронное*/
 .addList {
     position: absolute;
-    top: 43%;
+    top: 26%;
     left: 20px;
     z-index: 10; /* не работала на слайдере до z-index  */
 }
@@ -224,14 +226,28 @@
     font-size: 20px;
     font-weight: 400;
     text-transform: uppercase;
+    position: relative;
+    &:before{
+    content: "";
+    width: 5%;
+    height: 3px;
+    background-color: #d58e32;
+    position: absolute;
+    top: 33px;
+    left: 0%;
+    }
+    &:after{
+    content: "";
+    width: 95%;
+    height: 3px;
+    background-color: #e2e2e2;
+    position: absolute;
+    top: 33px;
+    left: 5%;
+    }
 }
 
 
-
-/*линия горизонтальная*/
-.line {
-    border-bottom: 3px #e2e2e2 solid;
-}
 
 .gallery-big {
     max-height: 415px;
@@ -248,7 +264,7 @@
     width: 105px;
     height: 105px;
     position: absolute;
-    top: 48%;
+    top: 27%;
     left: 64%;
     z-index: 2;
     opacity: 0.8;
@@ -258,7 +274,7 @@
     position: absolute;
     width: 222px;
     height: 104px;
-    top: 66%;
+    top: 37%;
     right: 3%;
     z-index: 1;
     box-shadow: 2px 5px 5px grey;
@@ -279,6 +295,6 @@
     border-right: 29px solid transparent;
 }
 
-.gallery-two{
+.gallery-right{
     height: 603px;
 }
