--- a/OnlineShop/src/templates/gallery.html
+++ b/OnlineShop/src/templates/gallery.html
@@ -1,7 +1,9 @@
+<!-- furniture gallery -->
 <section class="gallery">
     <div class="container">
-        <div class="row-no-wrap">
-            <div class="furniture-gallery col-6 col-lg-6">
+            <div id="gallery"><a name="top" href="#"></a></div>
+        <div class="row">
+            <div class="furniture-gallery w-sm-451 w-md-555 col-lg-6">
 
                 <div class="addList icons d-flex flex-column">
                     <a href="#" data-toggle="tooltip" data-placement="right" title="Add to wishlist"><i
@@ -34,8 +36,7 @@
                     </div>
 
 
-                    <h2>furniture gallery</h2>
-                    <div class="line  mt-2 mb-2 w-100"></div>
+                    <h2>furniture gallery</h2>                
 
 
                     <ul class="nav nav-tabs" id="myTab" role="tablist">
@@ -75,8 +76,10 @@
                                 <img class="avatar" src="./src/images/gallery/14.png" alt="gallery-image">
                             </div>
                             <div class="bottom-slider  w-100">
+                                <div class="container">
+                              <div class="row">
                                 <div class="wrapper-slider d-flex row-no-wrap">
-                                    <button class="btn-left col-1"> <i class="fas fa-chevron-left arrow"></i> </button>
+                                    <button class="btn-left"> <i class="fas fa-chevron-left arrow"></i> </button>
                                     <img class="img-slider col-2 zoom" data-set="1" src="./src/images/gallery/10.png"
                                         alt="gallery-image">
                                     <img class="img-slider col-2" data-set="2" src="./src/images/gallery/11.png"
@@ -87,9 +90,11 @@
                                         alt="gallery-image">
                                     <img class="img-slider col-2" data-set="5" src="./src/images/gallery/14.png"
                                         alt="gallery-image">
-                                    <button class="btn-right col-1 w-50"> <i class="fas fa-chevron-right arrow"></i>
+                                    <button class="btn-right"> <i class="fas fa-chevron-right arrow"></i>
                                     </button>
                                 </div>
+                              </div> 
+                            </div>
                             </div>
 
                         </div>
@@ -202,26 +207,25 @@
                     </div>
 
 
-
-
-
-
-
                 </div>
-                <!-- <div class="gallery-two col-6 d-none d-lg-block  border h-100">
+            </div> 
 
-                    <div class=" flex-column px-5">
-                        <div class="py-5">
-                            <span class="from py-2">FROM<span class="fromPrice">$50.80</span></span>
-                            <div class="badroom py-2">Badroom Bed</div>
-                            <button type="button" class="btn button-shop py-2">shop now</button>
+              <div class="row">
+                    <div class="container">
+                      <div class="gallery-right  d-none d-lg-block  border h-100">
+                        <div class=" flex-column px-5">
+                            <div class="py-5">
+                                <span class="from py-2">FROM<span class="fromPrice">$50.80</span></span>
+                                <div class="badroom py-2">Badroom Bed</div>
+                                <button type="button" class="btn button-shop py-2">shop now</button>
+                            </div>
+                            <img src="./src/images/product/bed.png" alt="" class="py-2 w-100">
                         </div>
-                        <img src="./src/images/product/bed.png" alt="" class="py-2 w-100">
+    
+                      </div>
                     </div>
-
-                </div> -->
-
-            </div>
+                  </div> 
+            
         </div>
 
 </section>
