--- a/OnlineShop/src/templates/header.html
+++ b/OnlineShop/src/templates/header.html
@@ -2,9 +2,9 @@
     <!-- <div class="overlay"></div> -->
     <div class="container">
         <div class="row d-flex align-items-center">
-            <div class="phone col-4 d-flex justify-content-center align-items-center"><img class="d-none d-md-block mr-2  icon-tel" src="./src/images/logos/tel_icon.png"><span>2300 - 3560 - 222</span></div>
+            <div class="phone col-4 d-flex align-items-center"><a><img class="d-none d-md-block mr-2  icon-tel" src="./src/images/logos/tel_icon.png"><span>2300 - 3560 - 222</span></a></div>
             <a class="col-4 d-flex justify-content-center"><img src="./src/images/logos/logo.png" alt="logo image"></a>
-            <div class="cart col-4 d-flex justify-content-center">
+            <div class="cart col-4 d-flex justify-content-end">
             <a href="#" class="cart d-flex align-items-center justify-content-end" data-toggle="modal" data-target="#exampleModal">
                     <img class="rounded" src="./src/images/logos/card_icon.png">
                     <div id="cardCountItem" class="my-card-items-count rounded-circle bg-dark text-white">1</div>
