--- a/OnlineShop/src/templates/stocks.html
+++ b/OnlineShop/src/templates/stocks.html
@@ -1,5 +1,6 @@
 <section class="stocks">
 	<div class="container">
+		<div id="stocks"><a name="top" href="#"></a></div>
 		<div class="row d-flex justify-content-center">
 			<div class="col-12 col-xl-6 d-none d-md-block text-center">
 				<a class="stocks-links" href="#">
