--- a/OnlineShop/src/templates/features.html
+++ b/OnlineShop/src/templates/features.html
@@ -1,3 +1,4 @@
+<!-- Section FEATURES -->
 <section class="features">
         <div class="container d-flex flex-wrap">                  
             <div id="features"><a name="top" href="#"></a></div>
