--- a/OnlineShop/src/templates/gallery.html
+++ b/OnlineShop/src/templates/gallery.html
@@ -1,9 +1,9 @@
-<!-- furniture gallery -->
+<!-- furniture GALLERY -->
 <section class="gallery">
     <div class="container">
             <div id="gallery"><a name="top" href="#"></a></div>
         <div class="row">
-            <div class="furniture-gallery w-sm-451 w-md-555 col-lg-6">
+            <div class="furniture-gallery col-sm-11 col-md-10 col-lg-6">
 
                 <div class="addList icons d-flex flex-column">
                     <a href="#" data-toggle="tooltip" data-placement="right" title="Add to wishlist"><i
@@ -37,9 +37,10 @@
 
 
                     <h2>furniture gallery</h2>                
-
-
-                    <ul class="nav nav-tabs" id="myTab" role="tablist">
+                <div class="qqq w-100">
+                  <div class="container">
+                     <div class="row"> 
+                    <ul class="nav nav-tabs" id="myTab" role="tablist">                                               
                         <li class="nav-item col-3">
                             <a class="nav-link active" id="featured-tab" data-toggle="tab" href="#featured" role="tab"
                                 aria-controls="featured" aria-selected="true">Featured</a>
@@ -57,6 +58,9 @@
                                 aria-controls="top-rated" aria-selected="false">TOP RATED</a>
                         </li>
                     </ul>
+                </div>
+                </div>
+            </div>   
                     <div class="tab-content" id="myTabContent">
                         <div class="tab-pane fade show active" id="featured" role="tabpanel"
                             aria-labelledby="featured-tab">
@@ -76,7 +80,7 @@
                                 <img class="avatar" src="./src/images/gallery/14.png" alt="gallery-image">
                             </div>
                             <div class="bottom-slider  w-100">
-                                <div class="container">
+                             <div class="container">
                               <div class="row">
                                 <div class="wrapper-slider d-flex row-no-wrap">
                                     <button class="btn-left"> <i class="fas fa-chevron-left arrow"></i> </button>
@@ -94,7 +98,7 @@
                                     </button>
                                 </div>
                               </div> 
-                            </div>
+                             </div>
                             </div>
 
                         </div>
