--- a/OnlineShop/src/templates/navbar.html
+++ b/OnlineShop/src/templates/navbar.html
@@ -1,5 +1,4 @@
-<!-- SECTION NAVBAR -->
-
+<!-- Section NAVBAR -->
 <section class="navbar-top">
   <div class="container">
   <nav class="navbar navbar-expand navbar-dark bg-dark">
