--- a/OnlineShop/src/templates/top-slider.html
+++ b/OnlineShop/src/templates/top-slider.html
@@ -1,3 +1,4 @@
+<!-- Section TOP-SLIDER -->
 <section class="top-slider">
     <div class="container">
             <div id="slider"><a name="top" href="#"></a></div>
